[NETBEANS-2349] Add return scenario